tests/fixtures/invalid/pow_set_int_bool.py
# Cannot call pow() with Set[int], Int, Bool
x = pow({1, 2, 3}, 1, True)
